# ConnectFour

./: CMakeLists.txt  ConsoleColor.h  GUI.cpp  GUI.h  Spielfeld.cpp  Spielfeld.h  Verwaltung.cpp  Verwaltung.h  main.cpp
Graphics/: GUI.cpp  GUI.h
Spielertypen/: Bots.cpp  Bots.hpp  Mensch.cpp  Mensch.hpp  SchlauerBot.hpp  Spieler.cpp  VertikalerBot.cpp  ZufallsBot.hpp
Verwaltung/: Verwaltung.cpp  Verwaltung.h
allesmitspieler/: Bots.cpp  Bots.hpp  HorizontalerBot.cpp  HorizontalerBot.hpp  Mensch.cpp  Mensch.hpp  SchlauerBot.cpp  SchlauerBot.hpp  Spieler.cpp  Spieler.hpp  VertikalerBot.cpp  VertikalerBot.hpp  ZufallsBot.cpp  ZufallsBot.hpp  annahme.txt  test.cpp
